--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="./src/css/responsivo.css">
 
-    <title>One Piece - Semana do Zero ao Programador Contratado</title>
+    <title>One Piece - Base para criação da Ficha</title>
 </head>
 
 <body>
